tests/ui/retry_missing_args.stderr
error: custom attribute panicked
  --> tests/ui/retry_missing_args.rs:16:1
   |
16 | #[retry]
   | ^^^^^^^^
   |
   = help: message: retry macro requires arguments of ExponentialBackoffConfig and 'retry-if' function: Error("unexpected end of input, expected identifier")
